[package]
name = "char-list"
version = "0.0.1"
edition = "2021"

description = "An efficient string type with the same API as a linked-list of characters."
license = "MIT"
repository = "https://github.com/eignnx/char-list"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
front-vec = "0.0.2"

[dev-dependencies]
maybe-debug = "0.1.0"
assert2 = "0.3.6"