[package]
name = "char-list"
version = "0.0.3"
edition = "2021"

description = "A persistent string type with the same API as a linked-list of characters."
license = "MIT"
repository = "https://github.com/eignnx/char-list"

categories = ["data-structures"]
keywords = ["string", "prepend", "cons", "immutable", "persistent"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
front-vec = "0.0.4"
embed-doc-image = "0.1.4"

[dev-dependencies]
maybe-debug = "0.1.0"
assert2 = "0.3.6"

[features]
doc-images = []

[package.metadata.docs.rs]
# docs.rs uses a nightly compiler, so by instructing it to use our `doc-images` feature we
# ensure that it will render any images that we may have in inner attribute documentation.
features = ["doc-images"]