[package]
name = "char-list"
version = "0.3.0"
edition = "2021"

description = "A persistent string type with the same API as a linked-list of characters."
license = "MIT"
repository = "https://github.com/eignnx/char-list"

categories = ["data-structures"]
keywords = ["string", "prepend", "cons", "immutable", "persistent"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
front-vec = "0.0.8"
embed-doc-image = "0.1.4"
tracing = { version = "0.1.37" }

[dev-dependencies]
maybe-debug = "0.1.0"
assert2 = "0.3.6"
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
env_logger = "0.10.0"
test-log = { version = "0.2.12", features = ["trace", "log"] }

[features]
doc-images = []
trace-verbose = []

[package.metadata.docs.rs]
# docs.rs uses a nightly compiler, so by instructing it to use our `doc-images` feature we
# ensure that it will render any images that we may have in inner attribute documentation.
features = ["doc-images"]
